--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="books">Books</string>
     <string name="versions">Versions</string>
     <string name="about">About</string>
+    <string name="about_text">Hello and thank you for downloading the Tour the Bible app. The development of this resource was borne out of a trip I took to Israel with Moody Bible Institute. When we visited various sites and opened the Scriptures, I wished I had had this app. If you\’ll be touring Israel soon or if you\’re just a devoted student of the Word, now you can easily discover where the events of God\’s plan took place and gain a better understanding of the Bible than you\’ve ever had before. Please feel free to email me with any questions, bug fix requests, or suggestions.</string>
+    <string name="signature">In Him,\nAdam Zarn</string>
 
     <array name="all_books">
         <item>Genesis</item>
